<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>

    <string name="input">Enter in a value</string>
    <string name="result">result</string>
    <string name="reset">C</string>
    <string name="bracket">( )</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="multiply">×</string>
    <string name="minus">−</string>
    <string name="plus">+</string>
    <string name="coma">.</string>
    <string name="equal">=</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
</resources>
